--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <i class="fa-solid fa-x"></i>            
             </div> -->
             <ul class="simple">
-                <li><a href="#section1">Accueil</a><hr></li>
+                <li><a href="#section1">Test</a><hr></li>
                 <li><a href="#section2">À propos</a><hr></li>
                 <li><a href="#section3">Compétences</a><hr></li>
                 <li><a href="#section4">Projets</a><hr></li>
