--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="fontawesome-free-6.5.2-web/css/brands.css">
     <link rel="stylesheet" href="fontawesome-free-6.5.2-web/css/solid.css">
     <script src="public/js/script.js" defer ></script>
+    <script src="public/js/MenuMobile.js" defer ></script>
     <link rel="stylesheet" href="public/css/style.css" media="all">
 </head>
 <body>
@@ -22,10 +23,10 @@
             </a>
         </div>
         <nav>
-            <!-- <div class="menu">
+            <div class="menu">
                 <i class="fa-solid fa-bars"></i>
                 <i class="fa-solid fa-x"></i>            
-            </div> -->
+            </div>
             <ul class="simple">
                 <li><a href="#section1">Acceuil</a><hr></li>
                 <li><a href="#section2">À propos</a><hr></li>
