--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
                     <div class="barAr bootstrap"></div>
                 </div>
                 <div class="name">
+                    <h4>Bootstrap</h4>
+                    <div class="bar"></div>
+                    <div class="barAr tailwind"></div>
+                </div>
+                <div class="name">
                     <h4>Prestashop</h4>
                     <div class="bar"></div>
                     <div class="barAr prestashop"></div>
