feat:update_bootstrap_skill

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="barAr bootstrap"></div>
                 </div>
                 <div class="name">
-                    <h4>Bootstrap</h4>
+                    <h4>Tailwind</h4>
                     <div class="bar"></div>
                     <div class="barAr tailwind"></div>
                 </div>
