feat:ajout_box_integration

--- a/index.html
+++ b/index.html
@@ -257,6 +257,15 @@
                 </div>
             </div>
         </div>
+        <div class="projetLaravel">
+            <div class="esakafo">
+                <img src="public/image/moto.png" alt="projet Moto">
+                <div class="descri">
+                    <h3>Moto</h3>
+                    <p>Integration avec Html CSS</p>
+                </div> 
+            </div>
+        </div>
     </section>
     <footer>
 
