feat:projet_elecdis

--- a/index.html
+++ b/index.html
@@ -265,6 +265,13 @@
                     <p>Integration avec Html CSS</p>
                 </div> 
             </div>
+            <div class="esakafo">
+                <img src="public/image/evmanagement.png" alt="projet CSMS elecdis">
+                <div class="descri">
+                    <h3>Elecdis Charger EV Management</h3>
+                    <p>Developpement frontend du CSMS d'Elecdis avec ReactJs, Tailwind CSS, Redux toolkit</p>
+                </div> 
+            </div>
         </div>
     </section>
     <footer>
