--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kevin Rakotovao Web Developer</title>
+    <title>Kevin Rakotovao, Web Developer based in Madagascar</title>
     <link rel="shortcut icon" href="mylogo.png" type="image/x-icon">
     <link rel="stylesheet" href="fontawesome-free-6.5.2-web/css/fontawesome.css">
     <link rel="stylesheet" href="fontawesome-free-6.5.2-web/css/brands.css">
