feat:real_image_slider

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <link rel="preload" href="public/css/style.css" as="style" />
     <link rel="stylesheet" href="public/css/style.css" media="all" />
     <script src="public/js/script.js" defer></script>
+    <script src="public/js/Slider.js" defer></script>
     <script src="public/js/MenuMobile.js" defer></script>
     <link rel="canonical" href="https://kevinshcmidt.github.io/Portfolio/" />
   </head>
@@ -303,71 +304,72 @@
     </section>
     <section id="section4" class="section4">
       <h2>Projets personnel</h2>
-      <div class="projetLaravel">
-        <div class="esakafo">
-          <img
-            src="public/image/esakafo.png"
-            alt="Projet E-sakafo - Application de commande en ligne"
-          />
-          <div class="descri">
-            <h3>E-SAKAFO</h3>
-            <p>
-              C'est un projet personnel qui m'a permis de bien simuller LARAVEL
-            </p>
-            <p>
-              Une application web qui permet aux utilisateur de commander des
-              plats en ligne sur les restaurants d'Antananarivo
-            </p>
-            <p>LARAVEL, SASS, JavaScript, MySQL</p>
+      <div class="slider">
+        <button class="prev">&#10094;</button>
+        <div class="slider-container">
+          <div class="projetLaravel">
+            <!-- Vos éléments ici -->
+            <div class="esakafo">
+              <img src="public/image/esakafo.png" alt="Projet E-sakafo - Application de commande en ligne" />
+              <div class="descri">
+                <h3>E-SAKAFO</h3>
+                <p>C'est un projet personnel qui m'a permis de bien simuler LARAVEL</p>
+                <p>
+                  Une application web qui permet aux utilisateurs de commander des
+                  plats en ligne sur les restaurants d'Antananarivo
+                </p>
+                <p>LARAVEL, SASS, JavaScript, MySQL</p>
+              </div>
+            </div>
+            <div class="esakafo">
+              <img src="public/image/evoyage.png" alt="projet E-voyage - Application de reservation en ligne" />
+              <div class="descri">
+                <h3>E-VOYAGE</h3>
+                <p>Le projet qui m'a marqué le plus</p>
+                <p>
+                  Le plus grand projet que j'ai développer dépuis le jours ou j'ai
+                  appris a coder Une application web qui permet aux utilisateurs de
+                  reserver un, ou plusieur places pour une voyage terrestre
+                </p>
+                <p>LARAVEL, SASS, JavaScript, MySQL</p>
+              </div>
+            </div>
+            <div class="esakafo">
+              <img src="public/image/studentmanagement.png" alt="projet School-Management" />
+              <div class="descri">
+                <h3>School Management</h3>
+                <p>
+                  Le projet qui m'a permi de bien simuler laravel en tant qu'API
+                </p>
+                <p>
+                  Gestion d'ecole qui a comme fonctionnalités la gestion des élèves,
+                  la gestion des emplois du temps, enseignants, et les frais
+                  scolaire...
+                </p>
+                <p>LARAVEL, Bootstrap, VueJs, MySQL</p>
+              </div>
+            </div>
+            <div class="esakafo">
+              <img src="public/image/moto.png" alt="projet integration maquette web Moto" />
+              <div class="descri">
+                <h3>Moto</h3>
+                <p>Integration avec Html CSS</p>
+              </div>
+            </div>
+            <div class="esakafo">
+              <img src="public/image/evmanagement.png" alt="projet CSMS EV Electrique elecdis" />
+              <div class="descri">
+                <h3>Elecdis Charger EV Management</h3>
+                <p>
+                  Developpement frontend du CSMS d'Elecdis avec ReactJs, Tailwind
+                  CSS, Redux toolkit
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="evoyage">
-          <img src="public/image/evoyage.png" alt="projet E-voyage - Application de reservation en ligne" />
-          <div class="descri">
-            <h3>E-VOYAGE</h3>
-            <p>Le projet qui m'a marqué le plus</p>
-            <p>
-              Le plus grand projet que j'ai développer dépuis le jours ou j'ai
-              appris a coder Une application web qui permet aux utilisateurs de
-              reserver un, ou plusieur places pour une voyage terrestre
-            </p>
-            <p>LARAVEL, SASS, JavaScript, MySQL</p>
-          </div>
-        </div>
-        <div class="evoyage">
-          <img src="public/image/studentmanagement.png" alt="projet School-Management" />
-          <div class="descri">
-            <h3>School Management</h3>
-            <p>
-              Le projet qui m'a permi de bien simuler laravel en tant qu'API
-            </p>
-            <p>
-              Gestion d'ecole qui a comme fonctionnalités la gestion des élèves,
-              la gestion des emplois du temps, enseignants, et les frais
-              scolaire...
-            </p>
-            <p>LARAVEL, Bootstrap, VueJs, MySQL</p>
-          </div>
-        </div>
+        <button class="next">&#10095;</button>
       </div>
-      <div class="projetLaravel">
-        <div class="esakafo">
-          <img src="public/image/moto.png" alt="projet integration maquette web Moto" />
-          <div class="descri">
-            <h3>Moto</h3>
-            <p>Integration avec Html CSS</p>
-          </div>
-        </div>
-        <div class="esakafo">
-          <img src="public/image/evmanagement.png" alt="projet CSMS EV Electrique elecdis" />
-          <div class="descri">
-            <h3>Elecdis Charger EV Management</h3>
-            <p>
-              Developpement frontend du CSMS d'Elecdis avec ReactJs, Tailwind
-              CSS, Redux toolkit
-            </p>
-          </div>
-        </div>
       </div>
     </section>
     <footer></footer>
